# enrico

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Jenkinsfile  LICENSE  README.md  RELEASE.md
ci/: build_singlerod.sh  build_unittests.sh  cmake_singlerod.sh  download_xs.sh  patch_singlerod_input.sh  patch_singlerod_rea.sh  singlerod_matrix.sh  test_core_full_openmc_heat_surrogate.sh  test_core_partial_openmc_heat_surrogate.sh  test_openmc_heat_surrogate.sh  test_singlerod_nek5000.sh  test_singlerod_openmc.sh  test_singlerod_openmc_heat_surrogate.sh  test_singlerod_openmc_nek5000.sh  test_singlerod_openmc_nekrs.sh  test_unittests.sh  unzip_singlerod_statefile.sh
config/: SIZE  nekrs_home.h.in
core/: HEADER  mkuserfile.cmake
data/: build_openmc_data.py
include/: base_drivers.h  comm.h  drivers.h  error.h  message_passing.h  nek_driver.h  nek_interface.h  openmc_driver.h  openmc_interface.h  openmc_nek_driver.h  procinfo.h  stream_const.h  stream_geom.h
scripts/: bsub_enrico_summit.py  combine_vtk.py  summit_bsub_openmc_nekrs.sh
src/: base_drivers.cpp  boron_driver.cpp  cell_instance.cpp  comm_split.cpp  driver.cpp  (+26 more)
src/nek5000/: CMakeLists.txt
src/nek5000/core/: CMakeLists.txt  mkuserfile.cmake  nek_interface.f
src/nek5000/examples/annulus_2d/: README.md  cyl2.box
src/nek5000/examples/blasius/: SIZE  blasius.usr
src/nek5000/examples/cone/cone064/: cone.usr
src/nek5000/examples/cone/cone256/: SIZE
src/nek5000/examples/conj_ht/: SIZE  conj_ht.rea  conj_ht.usr
src/nek5000/examples/cyl_restart/: pb.rea
src/nek5000/examples/eddy_rich/: README.md
src/nek5000/examples/expansion/: mkmesh  nekmerge2
src/nek5000/examples/ext_cyl/: README.md  ext_cyl.usr  fpcyl.box  import.rea
src/nek5000/examples/fs_2/: SIZE  box.2d  std_wv.rea
src/nek5000/examples/hemi/: hemi.usr
src/nek5000/examples/lib/legacy/: ExTestmpi  RunTests
src/nek5000/examples/lin_channel2D/: README.md
src/nek5000/examples/lin_dfh_cav/: lin_dfh_cav.usr
src/nek5000/examples/mhd/: gpf.fld02i  gpf.rea  gpf.usr  gpf_m.rea  gpf_re.rea
src/nek5000/examples/moffatt/: SIZE  moff2.m  moffatt.usr
src/nek5000/examples/mv_wall/: mv_wall.usr
src/nek5000/examples/ocyl/: SIZE
src/nek5000/examples/os7000/: SIZE
src/nek5000/examples/peris/: SIZE  peris.usr
src/nek5000/examples/rayleigh/: README.md
src/nek5000/examples/robin/: robin.usr
src/nek5000/examples/smoother/: README.md
src/nek5000/examples/solid/: SIZE
src/nek5000/examples/strat/: re10f1000p0001.rea
src/nek5000/examples/taylor/: README.md  SIZE  taylor.usr
src/nek5000/examples/turbChannel/: turbChannel.box  turbChannel.re2  turbChannel.usr
src/nek5000/examples/turbInflow/: README.md  turbInflow.box  turbInflow.rea
src/nek5000/examples/vortex2/: SIZE  v2d.usr
src/nek5000/tools/: CMakeLists.txt
src/nek5000/tools/genmap/: CMakeLists.txt
tests/: CMakeLists.txt
tests/api_tests/: ethier.ma2  ethier.par  geometry.xml  materials.xml  settings.xml  test_coupled_api.cpp  test_nek5000_api.cpp  test_openmc_api.cpp
tests/comm_split_demo/: main.cpp
tests/core/: make_openmc_model.py
tests/core/full/: geometry.xml  materials.xml
tests/core/full/openmc_heat_surrogate/: enrico.xml
tests/core/partial/: geometry.xml  materials.xml  settings.xml
tests/core/partial/openmc_heat_surrogate/: enrico.xml
tests/coupled_driver/: geometry.xml  main.cpp  materials.xml  tallies.xml
tests/disjoint_bcast_debug/: main.cpp
tests/disjoint_comm_demo/: enrico.xml  main.cpp
tests/nek5000_api/: SIZE  ethier.par  main.cpp
tests/openmc_api/: main.cpp  settings.xml
tests/singlerod/: make_openmc_model.py  plot_openmc_heat.py
tests/singlerod/long/: SIZE  geometry.xml  materials.xml  rod_l.map  rod_l.rea  rod_l.usr  settings.xml  stream.xml
tests/singlerod/long/nek5000/: SIZE  rod_l.usr
tests/singlerod/long/nekrs/: rod_l.co2  rod_l.oudf  rod_l.par  rod_l.udf  rod_l.usr
tests/singlerod/long/openmc/: geometry.xml  settings.xml
tests/singlerod/long/openmc_heat_surrogate/: enrico.xml  geometry.xml  stream.xml
tests/singlerod/long/openmc_nek5000/: SIZE  enrico.xml  rod_l.map  rod_l.re2  rod_l.rea  rod_l.run01  rod_l.run03.tgz  rod_l.usr  settings.xml  stream.xml
tests/singlerod/long/openmc_nekrs/: enrico.xml  materials.xml  rod_l.co2  rod_l.oudf  rod_l.par  rod_l.re2  rod_l.run03.tgz  rod_l.udf  rod_l.usr
tests/singlerod/openmc_boron_heat_surrogate/: enrico.xml  geometry.xml  settings.xml
tests/singlerod/short/: README  SIZE  geometry.xml  materials.xml  rodcht.rea  rodcht.usr  settings.xml  singlerod_short.inp.xml  singlerod_short.omn  singlerod_short.rtk.xml  stream.xml  test_coupled.cpp  test_nek5000.cpp  test_openmc.cpp  test_shift_coupled.cpp
tests/singlerod/short/ci_config/: SIZE.diff  rodcht_rea.diff
tests/singlerod/short/nek5000/: SIZE  rodcht.map  rodcht.rea  rodcht.usr  rodcht_rea.diff  test_nek5000.cpp
tests/singlerod/short/nekrs/: rod_short.co2  rod_short.oudf  rod_short.par  rod_short.re2  rod_short.rea  rod_short.udf  rod_short.usr  rod_short_par.diff
tests/singlerod/short/openmc_heat_surrogate/: enrico.xml  stream.xml  test_openmc_split_comm.cpp
tests/singlerod/short/openmc_nek5000/: enrico.xml  rodcht.rea  stream.xml
tests/singlerod/short/openmc_nekrs/: enrico.xml  rod_short.co2  rod_short.oudf  rod_short.par  rod_short.re2  rod_short.rea  rod_short.udf  rod_short.usr
tests/singlerod/short/shift/: singlerod_comps.h5  singlerod_short.omn
tests/singlerod/short/shift_nek5000/: README.md  enrico.xml  rodcht.map  singlerod_comps.h5  singlerod_short.inp.xml  singlerod_short.rtk.xml
tests/singlerod/short_rans/: SIZE  rodcht3.map  rodcht3.rea  rodcht3.usr
tests/src/openmc_api/: plots.xml
tests/struct_interop_demo/: Makefile  driver.cpp  fobj.f90
tests/test_nekrs/: enrico.xml  test_nekrs.cpp
tests/unit/: test_surrogate_th.cpp
tests/unit/inputs/: test_surrogate_th_3x3_auto.xml  test_surrogate_th_3x3_defined.xml  test_surrogate_th_3x3_skip.xml  test_surrogate_th_multi.xml  test_surrogate_th_multi_skip.xml  test_surrogate_th_single.xml
(+183 files in other folders)
